--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@ Facebook: 		https://www.facebook.com/fh5co
 		<div class="speakers-grid">
 			<div class="speaker-card">
 				<img src="w_files/lipo_wang.png" alt="">
-				<h3>Prof Lipo Wang</h3>
-				<p>Nanyang Technological University</p>
-				<p>Singapore</p>
+				<h3>Dr. Debjani Chakraborty </h3>
+				<p> IIT Kharagpur</p>
+				
 			        </div>
 
 			<div class="speaker-card">
@@ -639,3 +639,4 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
