--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ Facebook: 		https://www.facebook.com/fh5co
 
 			<div class="speaker-card">
 				<img src="w_files/Kusum_Deep.png" alt="Simge Küçükyavuz">
-				<h3>Prof Kusum Deep</h3>
-				<p>Indian Institute of Technology</p>
+				<h3>Dr Geetanjali Panda</h3>
+				<p>IIT Kharagpur</p>
 				<p>Roorkee</p>
                                 </div>
 
@@ -639,4 +639,5 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
