--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@ Facebook: 		https://www.facebook.com/fh5co
 
 			<div class="speaker-card">	
 				<img src="w_files/Efren.png">
-				<h3>Dr Efrén Mezura-Montes</h3>
-				<p>University of Veracruz</p>
-				<p>Mexico</p>
+				<h3>Dr. Kusum Deep</h3>
+				<p>, IIT Roorkee</p>
+				
 				</div>
 
 			<div class="speaker-card">
@@ -639,6 +639,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
