--- a/index.html
+++ b/index.html
@@ -393,16 +393,16 @@ Facebook: 		https://www.facebook.com/fh5co
 
 			<div class="speaker-card">
 			 	<img src="w_files/donghwi_jung.png" alt="Claudia Sagastizábal">
-			 	<h3>Dr Donghwi Jung</h3>
-			 	<p>Korea University</p>
-			 	<p>Korea</p>
+			 	<h3>Dr. Rakhi Singh</h3>
+			 	<p> IIT Madras</p>
+			 	
 		  		</div>
 			
 			<div class="speaker-card">	
 				<img src="w_files/nilanjal dey (1).png">
-				<h3>Dr Anupam Trivedi</h3>
-				<p>National University of Singapore</p>
-				<p>Singapore</p>
+				<h3>Dr. Arti Pandey</h3>
+				<p>IIT Ropar</p>
+				
 				</div>
 			
 			<div class="speaker-card">	  
@@ -639,6 +639,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
