--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ Facebook: 		https://www.facebook.com/fh5co
 				<img src="w_files/lipo_wang.png" alt="">
 				<h3>Dr. Debjani Chakraborty </h3>
 				<p> IIT Kharagpur</p>
-				
+				<p></p>
 			        </div>
 
 			<div class="speaker-card">
@@ -414,15 +414,15 @@ Facebook: 		https://www.facebook.com/fh5co
 			
 		        <div class="speaker-card">	
 				<img src="w_files/Dr._Sanjay.png">
-				<h3>Prof Sanjay Singh</h3>
-				<p>Senior Pr. Scientist</p>
-				<p>Head CSIR-CEERI</p>
+				<h3>Dr. Siuli Mukhopadhyay</h3>
+				<p>IIT Bombay</p>
+				<p></p>
 				</div>
 			
 			<div class="speaker-card">	
 		    		<img src="w_files/JC_bansal.png">
-				<h3>Dr JC Bansal</h3>
-				<p>South Asian University</p>
+				<h3>Dr Millie Pant</h3>
+				<p>IIT Roorkee</p>
 				<p></p>
 				</div>
 			
@@ -639,6 +639,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
