--- a/index.html
+++ b/index.html
@@ -407,15 +407,15 @@ Facebook: 		https://www.facebook.com/fh5co
 			
 			<div class="speaker-card">	  
 				<img src="w_files/manoj_thakur.png"> 
-				<h3>Dr Manoj Thakur</h3>
-				<p>Indian Institute of Technology</p>
-				<p>Mandi</p>
+				<h3>Dr. Siuli Mukhopadhyay</h3>
+				<p>IIT Bombay</p>
+				<p></p>
 				</div> 
 			
 		        <div class="speaker-card">	
 				<img src="w_files/Dr._Sanjay.png">
-				<h3>Dr. Siuli Mukhopadhyay</h3>
-				<p>IIT Bombay</p>
+				<h3>Dr Millie Pant</h3>
+				<p>IIT Roorkee</p>
 				<p></p>
 				</div>
 			
@@ -428,24 +428,24 @@ Facebook: 		https://www.facebook.com/fh5co
 			
 			<div class="speaker-card">	
 				<img src="w_files/abhishek gupta.png">
-				<h3>Dr Abhishek Gupta</h3>
-				<p>Indian Institute of Technology</p>
-				<p>Goa</p>
+				<h3>Dr Santwana Mukhopadhyay</h3>
+				<p>IIT BHU</p>
+				<p></p>
 				</div>
 
 			<div class="speaker-card">    
 				<img src="w_files/bapi_dutta.png">
-				<h3>Dr Bapi Dutta</h3>
-				<p>University of Jaen</p>
-				<p>Jaen, Spain</p>
+				<h3>Dr Anu Sayal</h3>
+				<p>Taylor’s University</p>
+				<p>JMalaysia </p>
 	      			</div> 
 		  
 		  
 			<div class="speaker-card">
 				<img src="w_files/indu_bala.png">
-				<h3>Dr Indu Bala	</h3>
-				<p>University of Adelaide</p>
-				<p>Australia</p>
+				<h3>Dr. Nahid Fatima	</h3>
+				<p> Prince Sultan University Riyadh</p>
+				<p>Saudi Arabia</p>
 				</div> 
 
 			<div class="speaker-card">	
@@ -639,6 +639,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
