--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Facebook: 		https://www.facebook.com/fh5co
 		 ain. The summer school aims to foster a collaborative learning environment, where participants can
 		  engage in discussions, work on projects, and gain insights into the latest trends 
 		and future directions of research at the intersection of evolutionary algorithms and machine learning.</p>
-      <p><strong>When?</strong>  16th June 2025 – 20th  June 2025</p>
+      <p><strong>When?</strong>  12th January 2026 to 16th January 2026</p>
       <p><strong>Where?</strong>  Dr B R Ambedkar National Institute of Technology Jalandhar, Punjab, India.</p>
     </section>
     <section id="keynote">
@@ -639,6 +639,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
