--- a/index.html
+++ b/index.html
@@ -347,22 +347,24 @@ Facebook: 		https://www.facebook.com/fh5co
       <h2>About</h2>
 	  <p style="text-align: justify;">The <strong>"Evolutionary Algorithms and Machine Learning: Theory and Applications"</strong> 
 		summer school offers a comprehensive and intensive exploration of the intersection 
-		between <strong> evolutionary algorithms (EAs)</strong> and <strong>machine learning (ML)</strong>. This program is 
-		designed to provide participants with both theoretical foundations and practical 
-		insights into how evolutionary strategies can enhance machine 
-		learning models and vice versa. Participants will delve into the principles of 
-		evolutionary algorithms, including genetic algorithms, genetic programming, and
-		 other optimization techniques that draw inspiration from natural evolution. 
-		 The program covers how these algorithms can be used to solve complex optimization 
-		 problems, optimize neural networks, or even evolve new machine learning models. 
-		 Furthermore, the summer school incorporates hands-on sessions where attendees will 
-		 apply these concepts in real- world scenarios, such as optimizing hyper parameters in ML models, 
-		 designing adaptive learning systems, or tackling large-scale computational problems. Leading experts 
-		 in the field will share their research and experiences, offering valuable perspectives on both the 
-		 challenges and breakthroughs in this rapidly evolving dom
-		 ain. The summer school aims to foster a collaborative learning environment, where participants can
-		  engage in discussions, work on projects, and gain insights into the latest trends 
-		and future directions of research at the intersection of evolutionary algorithms and machine learning.</p>
+		between <strong> evolutionary algorithms (EAs)</strong> and <strong>machine learning (ML)</strong>. Dr B R Ambedkar National Institute of Technology
+Jalandhar is amongst the 32 NITs established by
+Ministry of HRD, Government of India. The institute
+came into existence in the year 1988 (earlier Regional
+Engineering College Jalandhar) and obtained the
+status “Institute of National Importance” by Act of
+Parliament 2007. The institute is offering B. Tech.
+programme in various disciplines like Mathematics
+and Computing, Computer Science and Engineering,
+Electronics and Communication Engineering,
+Instrumentation and Control Engineering, Mechanical
+Engineering, Civil Engineering, Textile Technology,
+Biotechnology, Chemical Engineering, and Industrial
+& Production Engineering. In addition to B Tech
+programmes, the institute offers M Sc programmes in
+Mathematics, Physics and Chemistry, M Tech
+programmes in all Engineering departments, and Ph D
+programmes. </p>
       <p><strong>When?</strong>  12th January 2026 to 16th January 2026</p>
       <p><strong>Where?</strong>  Dr B R Ambedkar National Institute of Technology Jalandhar, Punjab, India.</p>
     </section>
@@ -639,6 +641,7 @@ Facebook: 		https://www.facebook.com/fh5co
 
 </body>
 </html>
+
 
 
 
