--- a/index.html
+++ b/index.html
@@ -347,23 +347,23 @@ Facebook: 		https://www.facebook.com/fh5co
       <h2>About</h2>
 	  <p style="text-align: justify;">The <strong>"Evolutionary Algorithms and Machine Learning: Theory and Applications"</strong> 
 		summer school offers a comprehensive and intensive exploration of the intersection 
-		between <strong> evolutionary algorithms (EAs)</strong> and <strong>machine learning (ML)</strong>. Dr B R Ambedkar National Institute of Technology
+		between <strong> evolutionary algorithms (EAs)</strong> and <strong></strong>. Dr B R Ambedkar National Institute of Technology
 Jalandhar is amongst the 32 NITs established by
 Ministry of HRD, Government of India. The institute
 came into existence in the year 1988 (earlier Regional
 Engineering College Jalandhar) and obtained the
 status “Institute of National Importance” by Act of
-Parliament 2007. The institute is offering B. Tech.
+Parliament 2007. The institute is offering B.Tech.
 programme in various disciplines like Mathematics
 and Computing, Computer Science and Engineering,
 Electronics and Communication Engineering,
 Instrumentation and Control Engineering, Mechanical
 Engineering, Civil Engineering, Textile Technology,
 Biotechnology, Chemical Engineering, and Industrial
-& Production Engineering. In addition to B Tech
+& Production Engineering. In addition to B.Tech
 programmes, the institute offers M Sc programmes in
-Mathematics, Physics and Chemistry, M Tech
-programmes in all Engineering departments, and Ph D
+Mathematics, Physics and Chemistry, M.Tech
+programmes in all Engineering departments, and Ph.D
 programmes. </p>
       <p><strong>When?</strong>  12th January 2026 to 16th January 2026</p>
       <p><strong>Where?</strong>  Dr B R Ambedkar National Institute of Technology Jalandhar, Punjab, India.</p>
@@ -641,6 +641,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
