--- a/index.html
+++ b/index.html
@@ -345,9 +345,8 @@ Facebook: 		https://www.facebook.com/fh5co
 	
     <section id="about">
       <h2>About</h2>
-	  <p style="text-align: justify;">The <strong>"Evolutionary Algorithms and Machine Learning: Theory and Applications"</strong> 
-		summer school offers a comprehensive and intensive exploration of the intersection 
-		between <strong> evolutionary algorithms (EAs)</strong> and <strong></strong>. Dr B R Ambedkar National Institute of Technology
+	  <p style="text-align: justify;"> <strong></strong> 
+		 <strong> </strong>  <strong></strong>. Dr B R Ambedkar National Institute of Technology
 Jalandhar is amongst the 32 NITs established by
 Ministry of HRD, Government of India. The institute
 came into existence in the year 1988 (earlier Regional
@@ -361,7 +360,7 @@ Instrumentation and Control Engineering, Mechanical
 Engineering, Civil Engineering, Textile Technology,
 Biotechnology, Chemical Engineering, and Industrial
 & Production Engineering. In addition to B.Tech
-programmes, the institute offers M Sc programmes in
+programmes, the institute offers M.Sc programmes in
 Mathematics, Physics and Chemistry, M.Tech
 programmes in all Engineering departments, and Ph.D
 programmes. </p>
@@ -641,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
