--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Facebook: 		https://www.facebook.com/fh5co
     <section id="about">
       <h2>About</h2>
 	  <p style="text-align: justify;"> <strong></strong> 
-		 <strong> </strong>  <strong></strong>. Dr B R Ambedkar National Institute of Technology
+		 <strong> </strong>  <strong></strong> Dr B R Ambedkar National Institute of Technology
 Jalandhar is amongst the 32 NITs established by
 Ministry of HRD, Government of India. The institute
 came into existence in the year 1988 (earlier Regional
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
