--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@ programmes. </p>
 
     <section id="contact">
       <h2>Contact Us</h2>
-      <p>Dr. Anupam Yadav<br>
+      <p>Dr. Deepika Rani<br>
 		Associate Professor<br>
 		Department of Mathematics<br>
 		Dr B. R. Ambedkar National Institute of Technology Jalandhar, Punjab, India.<br>
-		Mobile : +91 9627273447 <br>
-		Email: <a type="email" href="mailto:anupam@nitj.ac.in">anupam@nitj.ac.in</a>.</p>
+		Mobile : +91 8439590716 <br>
+		Email: <a type="email" href="mailto:ranid@nitj.ac.in">ranid@nitj.ac.in</a>.</p>
     </section>
 	<section id="Sponsors">
 		
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
