--- a/index.html
+++ b/index.html
@@ -492,14 +492,14 @@ programmes. </p>
 				</div>
 
 			<div class="speaker-card">	
-				<img src="w_files/dikshit.png">
+				<img src="w_files/.png">
 				<h3></h3>
 				<p></p>
 				<p></p>
 				</div>
 
 			<div class="speaker-card">	
-				<img src="w_files/Aninda+Bose.png">
+				<img src="w_files/Anida+bose.png">
 				<h3></h3>
 				<p></p>
 				<p></p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
