--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ programmes. </p>
 				</div>
 
 			<div class="speaker-card">	
-				<img src="w_files/op_verma.png">
+				<img src="w_files/.png">
 				<h3></h3>
 				<p></p>
 				<p></p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
