--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ programmes. </p>
 				</div> 
 
 			<div class="speaker-card">	
-				<img src="w_files/kedar_nath.png">
+				<img src="w_files/indu_bala.png">
 				<h3>Dr. Indu Bala </h3>
 				<p>The University of Adelaide</p>
 				<p> Australia</p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
