--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ programmes. </p>
                                 </div>
 
 			<div class="speaker-card">	
-				<img src="w_files/Efren.png">
+				<img src="w_files/Kusum_Deep.png">
 				<h3>Dr. Kusum Deep</h3>
 				<p> IIT Roorkee</p>
 				<p></p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
