--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ programmes. </p>
 		
 		<div class="speakers-grid">
 			<div class="speaker-card">
-				<img src="w_files/lipo_wang.png" alt="">
+				<img src="w_files/.png" alt="">
 				<h3>Dr. Debjani Chakraborty </h3>
 				<p> IIT Kharagpur</p>
 				<p></p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
