--- a/index.html
+++ b/index.html
@@ -400,21 +400,21 @@ programmes. </p>
 		  		</div>
 			
 			<div class="speaker-card">	
-				<img src="w_files/nilanjal dey (1).png">
+				<img src="w_files/.png">
 				<h3>Dr. Arti Pandey</h3>
 				<p>IIT Ropar</p>
 				<p></p>
 				</div>
 			
 			<div class="speaker-card">	  
-				<img src="w_files/manoj_thakur.png"> 
+				<img src="w_files/.png"> 
 				<h3>Dr. Siuli Mukhopadhyay</h3>
 				<p>IIT Bombay</p>
 				<p></p>
 				</div> 
 			
 		        <div class="speaker-card">	
-				<img src="w_files/Dr._Sanjay.png">
+				<img src="w_files/.png">
 				<h3>Dr Millie Pant</h3>
 				<p>IIT Roorkee</p>
 				<p></p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
