--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ programmes. </p>
 		  
 		  
 			<div class="speaker-card">
-				<img src="w_files/indu_bala.png">
+				<img src="w_files/.png">
 				<h3>Dr. Ramya Rachmawati	</h3>
 				<p>  University of Bengkulu</p>
 				<p>Indonesia</p>
@@ -640,6 +640,7 @@ programmes. </p>
 
 </body>
 </html>
+
 
 
 
